--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
   page_transition: ^2.0.5
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
