--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,11 @@ flutter_native_splash:
   android_gravity: fill
   android_12:
     image: assets/images/c.png
-    color: "#e1f7e9"
+    color: "#dfebe1"
+    icon_background_color: "#dfebe1"
     image_dark: assets/images/d.png
     color_dark: "#000000"
+    icon_background_color_dark: "#000000"
 
 
 # For information on the generic Dart part of this file, see the
